--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   min-height: 100vh;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(1px + 2vmin);
   color: gray;
 }
 
@@ -18,4 +18,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+}
+
+.container-table {
+  min-width: 100vh;
 }
